fix globals for dark mode

--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -36,7 +36,7 @@
     --radius: 0.5rem;
   }
 
-  .dark {
+  [data-mode='dark'] {
     --background: theme(colors.slate.900);
     --foreground: theme(colors.slate.100);
 
